--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,13 @@
 /* www.josefzacek.com /*
 
 /* mobile properties*/
+.browsehappy {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+	text-align:center;
+}
 body {
 	background-color:yellow;
 	font-size:80%;
