--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,15 @@ img {
     width:100%;
     height:auto;
 }
+.clearfix:before,
+.clearfix:after {
+    content: "";
+    display: table;
+}
 
+.clearfix:after {
+    clear: both;
+}
 /* column shortcodes */
 .full_width,
 .one_half,
